--- a/App.StudentManagement/App.StudentManagement/App.StudentManagement.csproj
+++ b/App.StudentManagement/App.StudentManagement/App.StudentManagement.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Library.StudentManagement\Library.StudentManagement.csproj" />
+  </ItemGroup>
+
 </Project>
