--- a/App.StudentManagement/Maui.StudentManagement/Maui.StudentManagement.csproj
+++ b/App.StudentManagement/Maui.StudentManagement/Maui.StudentManagement.csproj
@@ -72,6 +72,9 @@
 	  <MauiXaml Update="Views\PersonDetailView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\StudentListView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\StudentView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
