Added modification features to courses

--- a/App.StudentManagement/Maui.StudentManagement/Maui.StudentManagement.csproj
+++ b/App.StudentManagement/Maui.StudentManagement/Maui.StudentManagement.csproj
@@ -63,6 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\CourseListView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\InstructorView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
